--- a/Draw/Controller/Share/ShareCell.xib
+++ b/Draw/Controller/Share/ShareCell.xib
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1280</int>
-		<string key="IBDocument.SystemVersion">10K549</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
-		<string key="IBDocument.AppKitVersion">1038.36</string>
-		<string key="IBDocument.HIToolboxVersion">461.00</string>
+		<int key="IBDocument.SystemTarget">1296</int>
+		<string key="IBDocument.SystemVersion">11D50d</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
+		<string key="IBDocument.AppKitVersion">1138.32</string>
+		<string key="IBDocument.HIToolboxVersion">568.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">933</string>
+			<string key="NS.object.0">1179</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
-			<string>IBUIButton</string>
-			<string>IBUITableViewCell</string>
-			<string>IBUIImageView</string>
 			<string>IBProxyObject</string>
+			<string>IBUITableViewCell</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -39,160 +37,9 @@
 					<object class="IBUIView" id="1015859549">
 						<reference key="NSNextResponder" ref="695172771"/>
 						<int key="NSvFlags">256</int>
-						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUIImageView" id="832347040">
-								<reference key="NSNextResponder" ref="1015859549"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{10, 10}, {71, 73}}</string>
-								<reference key="NSSuperview" ref="1015859549"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="532043362"/>
-								<int key="IBUITag">30</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<object class="NSCustomResource" key="IBUIImage" id="91282714">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">user_picbg@2x.png</string>
-								</object>
-							</object>
-							<object class="IBUIImageView" id="293630214">
-								<reference key="NSNextResponder" ref="1015859549"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{88, 10}, {71, 73}}</string>
-								<reference key="NSSuperview" ref="1015859549"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="562252175"/>
-								<int key="IBUITag">31</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<reference key="IBUIImage" ref="91282714"/>
-							</object>
-							<object class="IBUIImageView" id="867064589">
-								<reference key="NSNextResponder" ref="1015859549"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{166, 10}, {71, 73}}</string>
-								<reference key="NSSuperview" ref="1015859549"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="87693641"/>
-								<int key="IBUITag">32</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<reference key="IBUIImage" ref="91282714"/>
-							</object>
-							<object class="IBUIImageView" id="622276418">
-								<reference key="NSNextResponder" ref="1015859549"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{244, 10}, {71, 73}}</string>
-								<reference key="NSSuperview" ref="1015859549"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="699901755"/>
-								<int key="IBUITag">33</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<reference key="IBUIImage" ref="91282714"/>
-							</object>
-							<object class="IBUIButton" id="532043362">
-								<reference key="NSNextResponder" ref="1015859549"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{13, 12}, {65, 64}}</string>
-								<reference key="NSSuperview" ref="1015859549"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="293630214"/>
-								<bool key="IBUIOpaque">NO</bool>
-								<int key="IBUITag">10</int>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<int key="IBUIContentHorizontalAlignment">0</int>
-								<int key="IBUIContentVerticalAlignment">0</int>
-								<object class="NSColor" key="IBUIHighlightedTitleColor" id="638657616">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MQA</bytes>
-								</object>
-								<object class="NSColor" key="IBUINormalTitleColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
-								</object>
-								<object class="NSColor" key="IBUINormalTitleShadowColor" id="463138712">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MC41AA</bytes>
-								</object>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="331446166">
-									<int key="type">2</int>
-									<double key="pointSize">15</double>
-								</object>
-								<object class="NSFont" key="IBUIFont" id="589791467">
-									<string key="NSName">Helvetica-Bold</string>
-									<double key="NSSize">15</double>
-									<int key="NSfFlags">16</int>
-								</object>
-							</object>
-							<object class="IBUIButton" id="562252175">
-								<reference key="NSNextResponder" ref="1015859549"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{91, 12}, {65, 64}}</string>
-								<reference key="NSSuperview" ref="1015859549"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="867064589"/>
-								<bool key="IBUIOpaque">NO</bool>
-								<int key="IBUITag">11</int>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<int key="IBUIContentHorizontalAlignment">0</int>
-								<int key="IBUIContentVerticalAlignment">0</int>
-								<reference key="IBUIHighlightedTitleColor" ref="638657616"/>
-								<object class="NSColor" key="IBUINormalTitleColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
-								</object>
-								<reference key="IBUINormalTitleShadowColor" ref="463138712"/>
-								<reference key="IBUIFontDescription" ref="331446166"/>
-								<reference key="IBUIFont" ref="589791467"/>
-							</object>
-							<object class="IBUIButton" id="87693641">
-								<reference key="NSNextResponder" ref="1015859549"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{169, 12}, {65, 64}}</string>
-								<reference key="NSSuperview" ref="1015859549"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="622276418"/>
-								<bool key="IBUIOpaque">NO</bool>
-								<int key="IBUITag">12</int>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<int key="IBUIContentHorizontalAlignment">0</int>
-								<int key="IBUIContentVerticalAlignment">0</int>
-								<reference key="IBUIHighlightedTitleColor" ref="638657616"/>
-								<object class="NSColor" key="IBUINormalTitleColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
-								</object>
-								<reference key="IBUINormalTitleShadowColor" ref="463138712"/>
-								<reference key="IBUIFontDescription" ref="331446166"/>
-								<reference key="IBUIFont" ref="589791467"/>
-							</object>
-							<object class="IBUIButton" id="699901755">
-								<reference key="NSNextResponder" ref="1015859549"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{247, 12}, {65, 64}}</string>
-								<reference key="NSSuperview" ref="1015859549"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
-								<bool key="IBUIOpaque">NO</bool>
-								<int key="IBUITag">13</int>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<int key="IBUIContentHorizontalAlignment">0</int>
-								<int key="IBUIContentVerticalAlignment">0</int>
-								<reference key="IBUIHighlightedTitleColor" ref="638657616"/>
-								<object class="NSColor" key="IBUINormalTitleColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
-								</object>
-								<reference key="IBUINormalTitleShadowColor" ref="463138712"/>
-								<reference key="IBUIFontDescription" ref="331446166"/>
-								<reference key="IBUIFont" ref="589791467"/>
-							</object>
-						</array>
-						<string key="NSFrameSize">{320, 89}</string>
+						<string key="NSFrameSize">{321, 88}</string>
 						<reference key="NSSuperview" ref="695172771"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="832347040"/>
+						<reference key="NSNextKeyView"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
@@ -204,9 +51,8 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{320, 90}</string>
+				<string key="NSFrameSize">{321, 89}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="1015859549"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
@@ -217,44 +63,7 @@
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
-			<array class="NSMutableArray" key="connectionRecords">
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">clickImageButton:</string>
-						<reference key="source" ref="532043362"/>
-						<reference key="destination" ref="695172771"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">14</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">clickImageButton:</string>
-						<reference key="source" ref="562252175"/>
-						<reference key="destination" ref="695172771"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">15</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">clickImageButton:</string>
-						<reference key="source" ref="87693641"/>
-						<reference key="destination" ref="695172771"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">16</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">clickImageButton:</string>
-						<reference key="source" ref="699901755"/>
-						<reference key="destination" ref="695172771"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">23</int>
-				</object>
-			</array>
+			<array class="NSMutableArray" key="connectionRecords"/>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
 					<object class="IBObjectRecord">
@@ -277,57 +86,8 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">3</int>
 						<reference key="object" ref="695172771"/>
-						<array class="NSMutableArray" key="children">
-							<reference ref="87693641"/>
-							<reference ref="532043362"/>
-							<reference ref="562252175"/>
-							<reference ref="832347040"/>
-							<reference ref="622276418"/>
-							<reference ref="867064589"/>
-							<reference ref="293630214"/>
-							<reference ref="699901755"/>
-						</array>
+						<array class="NSMutableArray" key="children"/>
 						<reference key="parent" ref="0"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">4</int>
-						<reference key="object" ref="532043362"/>
-						<reference key="parent" ref="695172771"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">5</int>
-						<reference key="object" ref="562252175"/>
-						<reference key="parent" ref="695172771"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">6</int>
-						<reference key="object" ref="87693641"/>
-						<reference key="parent" ref="695172771"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">17</int>
-						<reference key="object" ref="832347040"/>
-						<reference key="parent" ref="695172771"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">18</int>
-						<reference key="object" ref="293630214"/>
-						<reference key="parent" ref="695172771"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">20</int>
-						<reference key="object" ref="867064589"/>
-						<reference key="parent" ref="695172771"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">21</int>
-						<reference key="object" ref="699901755"/>
-						<reference key="parent" ref="695172771"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">22</int>
-						<reference key="object" ref="622276418"/>
-						<reference key="parent" ref="695172771"/>
 					</object>
 				</array>
 			</object>
@@ -335,58 +95,24 @@
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="18.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="20.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="21.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="22.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.CustomClassName">ShareCell</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">23</int>
+			<int key="maxID">30</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">ShareCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">clickImageButton:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">clickImageButton:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">clickImageButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ShareCell.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1280" key="NS.object.0"/>
+			<real value="1296" key="NS.object.0"/>
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="NS.key.0">user_picbg@2x.png</string>
-			<string key="NS.object.0">{142, 147}</string>
-		</object>
-		<string key="IBCocoaTouchPluginVersion">933</string>
+		<string key="IBCocoaTouchPluginVersion">1179</string>
 	</data>
 </archive>
