--- a/Draw/Controller/Share/ShareEditController.xib
+++ b/Draw/Controller/Share/ShareEditController.xib
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1280</int>
-		<string key="IBDocument.SystemVersion">10K549</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
-		<string key="IBDocument.AppKitVersion">1038.36</string>
-		<string key="IBDocument.HIToolboxVersion">461.00</string>
+		<int key="IBDocument.SystemTarget">1296</int>
+		<string key="IBDocument.SystemVersion">11D50d</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
+		<string key="IBDocument.AppKitVersion">1138.32</string>
+		<string key="IBDocument.HIToolboxVersion">568.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">933</string>
+			<string key="NS.object.0">1179</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
-			<string>IBUITextView</string>
-			<string>IBUIButton</string>
-			<string>IBUIImageView</string>
 			<string>IBUIView</string>
+			<string>IBUIImageView</string>
 			<string>IBUILabel</string>
 			<string>IBProxyObject</string>
+			<string>IBUITextView</string>
+			<string>IBUIScrollView</string>
+			<string>IBUIButton</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -55,7 +56,7 @@
 					<object class="IBUIImageView" id="304575801">
 						<reference key="NSNextResponder" ref="1033168711"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{0, 128}, {320, 329}}</string>
+						<string key="NSFrame">{{0, 113}, {320, 286}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="976250215"/>
@@ -83,7 +84,7 @@
 					<object class="IBUIImageView" id="13981569">
 						<reference key="NSNextResponder" ref="1033168711"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{6, 58}, {307, 68}}</string>
+						<string key="NSFrame">{{6.5, 392}, {307, 68}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="730877834"/>
@@ -133,7 +134,7 @@
 						<string key="NSFrame">{{238, 7}, {75, 31}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="13981569"/>
+						<reference key="NSNextKeyView" ref="173725740"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -151,10 +152,9 @@
 					<object class="IBUITextView" id="730877834">
 						<reference key="NSNextResponder" ref="1033168711"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{16, 74}, {284, 48}}</string>
+						<string key="NSFrame">{{16, 412}, {284, 48}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="304575801"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC45NDkwMTk2MDc4IDAuOTcyNTQ5MDE5NiAwLjk3NjQ3MDU4ODIgMAA</bytes>
@@ -180,9 +180,10 @@
 					<object class="IBUIImageView" id="976250215">
 						<reference key="NSNextResponder" ref="1033168711"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{16, 146}, {288, 296}}</string>
+						<string key="NSFrame">{{16, 119}, {289, 259}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="13981569"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
@@ -221,6 +222,33 @@
 							<double key="NSSize">20</double>
 							<int key="NSfFlags">16</int>
 						</object>
+					</object>
+					<object class="IBUIImageView" id="493504663">
+						<reference key="NSNextResponder" ref="1033168711"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{0, 93}, {320, 40}}</string>
+						<reference key="NSSuperview" ref="1033168711"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="304575801"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<object class="NSCustomResource" key="IBUIImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">normalpallets@2x.png</string>
+						</object>
+					</object>
+					<object class="IBUIScrollView" id="173725740">
+						<reference key="NSNextResponder" ref="1033168711"/>
+						<int key="NSvFlags">268</int>
+						<string key="NSFrame">{{0, 46}, {320, 48}}</string>
+						<reference key="NSSuperview" ref="1033168711"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="493504663"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<bool key="IBUIMultipleTouchEnabled">YES</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
@@ -287,6 +315,14 @@
 					<int key="connectionID">35</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">patternsGallery</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="173725740"/>
+					</object>
+					<int key="connectionID">38</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">publish:</string>
 						<reference key="source" ref="7302159"/>
@@ -330,13 +366,15 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="13981569"/>
 							<reference ref="730877834"/>
-							<reference ref="304575801"/>
 							<reference ref="239950230"/>
 							<reference ref="353693316"/>
 							<reference ref="710874393"/>
 							<reference ref="7302159"/>
-							<reference ref="976250215"/>
 							<reference ref="637044409"/>
+							<reference ref="304575801"/>
+							<reference ref="976250215"/>
+							<reference ref="493504663"/>
+							<reference ref="173725740"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -385,6 +423,16 @@
 						<reference key="object" ref="637044409"/>
 						<reference key="parent" ref="1033168711"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">36</int>
+						<reference key="object" ref="493504663"/>
+						<reference key="parent" ref="1033168711"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">37</int>
+						<reference key="object" ref="173725740"/>
+						<reference key="parent" ref="1033168711"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -403,12 +451,14 @@
 				<string key="25.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="28.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="34.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="36.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="37.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">35</int>
+			<int key="maxID">39</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -481,17 +531,18 @@
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1280" key="NS.object.0"/>
+			<real value="1296" key="NS.object.0"/>
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="back@2x.png">{74, 74}</string>
+			<string key="normalpallets@2x.png">{640, 81}</string>
 			<string key="paper@2x.png">{640, 960}</string>
 			<string key="topwood@2x.png">{640, 99}</string>
 			<string key="wood_bg@2x.png">{640, 960}</string>
 			<string key="wood_button.png">{16, 16}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">933</string>
+		<string key="IBCocoaTouchPluginVersion">1179</string>
 	</data>
 </archive>
